# headless

./: .gitignore  CMakeLists.txt  ReadMe.md
.github/workflows/: build-linux.yml  build.yml
src/: Extractor.cpp  Extractor.h  Extractor.hpp  Generator.cpp  Generator.h  GeneratorUnitHandler.cpp  GeneratorUnitHandler.h  IfDefParser.hpp  main.cpp  utils.hpp
test/: File1.hpp  input1.hpp  input2.hpp  output1.cpp  output1.hpp  output2.cpp  output2.h
test/-static_extra1/: expect.cpp  expect.hpp
test/annotation/: expect.cpp  expect.hpp  input.hpp
test/define/: expect.cpp  expect.hpp  input.hpp
test/ifdef/: expect.cpp  expect.hpp  input.hpp
test/inline/: expect.cpp  expect.hpp  input.hpp
test/lines/: expect.cpp  expect.hpp  input.hpp
test/namespace/: expect.cpp  expect.hpp  input.hpp
test/operator/: expect.cpp  expect.hpp  input.hpp
test/simple/: expect.cpp  expect.hpp  input.hpp
test/static/: expect.cpp  expect.hpp  input.hpp
test/static_extra1/: input.hpp
test/wrap/: expect.cpp  expect.hpp  input.hpp
